correct image links

--- a/margaret-atwood.html
+++ b/margaret-atwood.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="HBCB_logo-removebg.png" alt="Logo" width="100px" height="100px"
+                    <img src="images/HBCB_logo-removebg.png" alt="Logo" width="100px" height="100px"
                         class="d-inline-block logo align-text-center">
                     <span class="title">Hot Books Cold Brews</span>
                 </a>
@@ -45,7 +45,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-auto">
-                <img src="margaret-atwood.png" class="img-fluid max-width:100%" alt="Feminist Literature Meme">
+                <img src="images/margaret-atwood.png" class="img-fluid max-width:100%" alt="Feminist Literature Meme">
             </div>
         </div>
     </div>
