--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="index.html">
-                        <img src="HBCB_logo-removebg.png" alt="Logo" width="100px" height="100px"
+                        <img src="images/HBCB_logo-removebg.png" alt="Logo" width="100px" height="100px"
                             class="d-inline-block align-text-center logo">
                         <span class="title">Hot Books Cold Brews</span>
                     </a>
@@ -49,7 +49,7 @@
                         <div class="card w-75 mb-3 mx-auto bg-card" style="max-width:30rem">
                             <div class="row align-items-center">
                                 <div class="col-auto">
-                                    <img src="windrush-betrayal.jpg" width="100px" class="img-fluid" alt="The Windrush betrayal">
+                                    <img src="images/windrush-betrayal.jpg" width="100px" class="img-fluid" alt="The Windrush betrayal">
                                 </div>
                                 <div class="col">
                                     <div class="card-block py-2 px-2">
@@ -74,7 +74,7 @@
                 <div class="card w-75 mb-3 mx-auto bg-card" style="max-width:30rem">
                     <div class="row justify-content-center align-items-center">
                         <div class="col-auto ">
-                            <img src="sturdy-girl.jfif" width="100px;" ; class="img-fluid" alt="Good Sturdy Girl">
+                            <img src="images/sturdy-girl.jfif" width="100px;" ; class="img-fluid" alt="Good Sturdy Girl">
                         </div>
                         <div class="col">
                             <div class="card-block py-2 px-2">
@@ -98,7 +98,7 @@
                 <div class="card w-75 mb-3 mx-auto bg-card" style="max-width:30rem">
                     <div class="row justify-content-center align-items-center">
                         <div class="col-auto">
-                            <img src="margaret-atwood.png" width="100px;" ; class="img-fluid" alt="Good Sturdy Girl">
+                            <img src="images/margaret-atwood.png" width="100px;" ; class="img-fluid" alt="Good Sturdy Girl">
                         </div>
                         <div class="col">
                             <div class="card-block py-2 px-2">
