--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="HBCB_logo-removebg.png" alt="Logo" width="100px" height="100px"
+                    <img src="images/HBCB_logo-removebg.png" alt="Logo" width="100px" height="100px"
                         class="d-inline-block logo align-text-center">
                     <span class="title">Hot Books Cold Brews</span>
                 </a>
