--- a/self-esteem.html
+++ b/self-esteem.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="HBCB_logo-removebg.png" alt="Logo" width="100px" height="100px"
+                    <img src="images/HBCB_logo-removebg.png" alt="Logo" width="100px" height="100px"
                         class="d-inline-block logo align-text-center">
                     <span class="title">Hot Books Cold Brews</span>
                 </a>
@@ -47,7 +47,7 @@
             <div class="col-2">
             </div>
             <div class="col-auto">
-                <img src="sturdy-girl.jfif" class="img-fluid max-width:100%" width = "500px"; alt="Good Sturdy Girl">
+                <img src="images/sturdy-girl.jfif" class="img-fluid max-width:100%" width = "500px"; alt="Good Sturdy Girl">
             </div>
             <div class="col-2">
             </div>
